@@ -1,5 +1,7 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Fix deprecation message for Catalyst::Dispatcher to refer
+          to the class actually calling the deprecated method. RT#45741 (t0m)
         - Clarify limitations of $request->base and $request->secure.
           (Phil Mitchell)
 
